# server/docs/swagger.yaml
@@ -856,6 +856,30 @@ definitions:
         description: 收件人:多个以英文逗号分隔 例：a@qq.com b@qq.com 正式开发中请把此项目作为参数使用
         type: string
     type: object
+  inspection.InspAlert:
+    properties:
+      ID:
+        description: 主键ID
+        type: integer
+      collectedAt:
+        type: string
+      content:
+        type: string
+      createdAt:
+        description: 创建时间
+        type: string
+      inspectionId:
+        type: integer
+      level:
+        type: string
+      ruleType:
+        type: string
+      status:
+        type: string
+      updatedAt:
+        description: 更新时间
+        type: string
+    type: object
   inspection.InspCluster:
     properties:
       ID:
@@ -6587,7 +6611,14 @@ paths:
             - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/response.PageResult'
+                  allOf:
+                  - $ref: '#/definitions/response.PageResult'
+                  - properties:
+                      list:
+                        items:
+                          $ref: '#/definitions/inspection.InspAlert'
+                        type: array
+                    type: object
                 msg:
                   type: string
               type: object
